RESOLVED FIXED227163
makeUnique cannot be used to instantiate function-local classes
https://bugs.webkit.org/show_bug.cgi?id=227163
Summary makeUnique cannot be used to instantiate function-local classes
Kimmo Kinnunen
Reported 2021-06-18 01:34:13 PDT
makeUnique cannot be used to instantiate function-local classes This is due to WTF_MAKE_FAST_ALLOCATED causing warn-unused-typedef
Attachments
Patch (5.46 KB, patch)
2021-06-18 03:08 PDT, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (8.66 KB, patch)
2021-06-18 04:31 PDT, Kimmo Kinnunen
no flags
Patch (10.50 KB, patch)
2021-06-18 04:40 PDT, Kimmo Kinnunen
no flags
Patch (10.50 KB, patch)
2021-06-21 01:11 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-06-18 03:08:32 PDT
Antti Koivisto
Comment 2 2021-06-18 03:24:06 PDT
Comment on attachment 431764 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=431764&action=review > Source/WTF/wtf/FastMalloc.h:446 > +using __thisIsHereToForceASemicolonAfterThisMacro = int UNUSED_TYPE_ALIAS There is a similar using line in IsoHeap.h. Maybe that needs fixing too?
Kimmo Kinnunen
Comment 3 2021-06-18 04:31:10 PDT
Kimmo Kinnunen
Comment 4 2021-06-18 04:40:46 PDT
Kimmo Kinnunen
Comment 5 2021-06-21 01:11:09 PDT
EWS
Comment 6 2021-06-21 11:48:38 PDT
Committed r279073 (238993@main): <https://commits.webkit.org/238993@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431835 [details].
Radar WebKit Bug Importer
Comment 7 2021-06-21 11:49:28 PDT
Note You need to log in before you can comment on or make changes to this bug.