makeUnique cannot be used to instantiate function-local classes https://bugs.webkit.org/show_bug.cgi?id=227163

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-06-21
Reviewed by Antti Koivisto.

Source/bmalloc:

Make WTF_MAKE_FAST_ALLOCATED and similar macros work in function
local classes. Mark the typedef that is used to enforce semicolon
after the macro as unused to avoid unused typedef warning.
Fixes cases where the compiler is able to prove that it sees all the
use sites of the class and the typedef is not used.

* bmalloc/BCompiler.h:
* bmalloc/BMalloced.h:
* bmalloc/IsoHeap.h:
* bmalloc/IsoHeapInlines.h:

Source/JavaScriptCore:

Make JSC_MAKE_PARSER_ARENA_DELETABLE_ALLOCATED
consistent with WTF_MAKE_FAST_ALLOCATED behavior
with respect to unused typedefs inside the macro.

* parser/Nodes.h:

Source/WTF:

Make WTF_MAKE_FAST_ALLOCATED and similar macros work in function
local classes. Mark the typedef that is used to enforce semicolon
after the macro as unused to avoid unused typedef warning.
Fixes cases where the compiler is able to prove that it sees all the
use sites of the class and the typedef is not used.

* wtf/Compiler.h:
* wtf/FastMalloc.h:

Tools:

Test that WTF_MAKE_FAST_ALLOCATED and similar macros work in function
local classes.

* TestWebKitAPI/Tests/WTF/StdLibExtras.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/238993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279073 268f45cc-cd09-0410-ab3c-d52691b4dbfc