Tools/TestWebKitAPI/Tests/WTF/StdLibExtras.cpp
@@ -111,4 +111,20 @@ void testFindBitInWord()
 TEST(WTF_StdLibExtras, findBitInWord_uint32_t) { testFindBitInWord<uint32_t>(); }
 TEST(WTF_StdLibExtras, findBitInWord_uint64_t) { testFindBitInWord<uint64_t>(); }
 
+// Tests that function-local types can be instantiated with makeUnique.
+// Style check would complain about use of std::make_unique, enforcing use of
+// makeUnique. The makeUnique needs WTF_..._MAKE_FAST_ALLOCATED.
+// There used to be a warn-unused-typedef errors when using these.
+TEST(WTF_StdLibExtras, MakeUniqueFunctionLocalTypeCompiles)
+{
+    struct LocalStruct {
+        WTF_MAKE_STRUCT_FAST_ALLOCATED;
+    };
+    class LocalClass {
+        WTF_MAKE_FAST_ALLOCATED;
+    };
+    auto s = makeUnique<LocalStruct>();
+    auto c = makeUnique<LocalClass>();
+}
+
 } // namespace TestWebKitAPI
